# idm_mobile_client_py

./: .gitignore  TODO.txt  client.py  setup.cfg
src/idm_mobile_client_py/: __init__.py  client.py  exceptions.py
