[metadata]
name = idm_mobile_client_py
version = 0.0.1
author = rany
author_email = ranygh@riseup.net
description = Reverse-engineered IDM mobile client
url = https://github.com/rany2/idm_mobile_client_py
project_urls =
    Bug Tracker=https://github.com/rany2/idm_mobile_client_py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir=
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.25.1

[options.packages.find]
where=src
